# Cpp-Game-Animation-Programming-Second-Edition

./: EXTRA_LICENSES.md  README.md
chapter01/: README.md
chapter01/01_simple_window/: .cproject  .project  Main.cpp
chapter01/02_opengl_window/: .cproject  .project  CMakeLists.txt  Main.cpp
chapter01/02_opengl_window/window/: Window.cpp
chapter01/03_vulkan_window/: .cproject  .project  CMakeLists.txt  Main.cpp
chapter01/03_vulkan_window/window/: Window.cpp  Window.h
chapter01/04_event_handling/: .cproject  .project  CMakeLists.txt  Main.cpp
chapter01/05_window_with_input/: .cproject  .project  CMakeLists.txt  Main.cpp
chapter02/: README.md
chapter02/opengl_renderer/: .cproject  .project  CMakeLists.txt
chapter03/: README.md
chapter03/vulkan_renderer/: .cproject  .project  CMakeLists.txt
chapter04/: README.md
chapter04/01_opengl_shader_switch/: .cproject  .project  CMakeLists.txt  Main.cpp
chapter04/02_opengl_ubo/: .cproject  .project  CMakeLists.txt  Main.cpp
chapter04/03_vulkan_shader_switch/: .cproject  .project  CMakeLists.txt  Main.cpp
chapter04/03_vulkan_shader_switch/shader/: basic.vert  changed.frag  changed.vert
chapter04/03_vulkan_shader_switch/vulkan/: Framebuffer.cpp  PipelineLayout.cpp  Shader.h  VkRenderData.h  VkRenderer.cpp  VkRenderer.h
chapter04/04_vulkan_ubo/: .cproject  .project  CMakeLists.txt  Main.cpp
chapter04/05_vulkan_push_constant/: .cproject  .project  CMakeLists.txt  Main.cpp
chapter05/: README.md
chapter05/01_opengl_ui/: .cproject  .project  CMakeLists.txt  Main.cpp
chapter05/02_opengl_ui_fps/: .cproject  .project  Main.cpp
chapter05/03_opengl_ui_timer/: .cproject  .project  Main.cpp
chapter05/04_opengl_ui_controls/: .cproject  .project  Main.cpp
chapter05/05_vulkan_ui/: .cproject  .project  CMakeLists.txt  Main.cpp
chapter05/06_vulkan_ui_fps/: .cproject  .project  CMakeLists.txt  Main.cpp
chapter05/07_vulkan_ui_timer/: .cproject  .project  Main.cpp
chapter05/08_vulkan_ui_controls/: .cproject  .project  Main.cpp
chapter06/: README.md
chapter06/01_opengl_view/: .cproject  .project  CMakeLists.txt  Main.cpp
chapter06/02_opengl_movement/: .cproject  .project  Main.cpp
chapter06/03_vulkan_view/: .cproject  .project  Main.cpp
chapter06/04_vulkan_movement/: .cproject  .project  CMakeLists.txt  Main.cpp
chapter07/: README.md
chapter07/01_opengl_rotation/: .cproject  .project  Main.cpp
chapter07/02_opengl_quaternion/: .cproject  .project  CMakeLists.txt  Main.cpp
chapter07/03_opengl_relative_rotation/: .cproject  .project  Main.cpp
chapter07/04_opengl_slerp/: .cproject  .project  CMakeLists.txt  Main.cpp
chapter07/05_opengl_spline/: .cproject  .project  Main.cpp
chapter07/06_opengl_quat_spline/: .cproject  .project  CMakeLists.txt  Main.cpp
chapter07/07_vulkan_rotation/: .cproject  .project  CMakeLists.txt  Main.cpp
chapter07/08_vulkan_quaternion/: .cproject  .project  Main.cpp
chapter07/09_vulkan_relative_rotation/: .cproject  .project  CMakeLists.txt  Main.cpp
chapter07/10_vulkan_slerp/: .cproject  .project  Main.cpp
chapter07/11_vulkan_spline/: .cproject  .project  CMakeLists.txt  Main.cpp
chapter07/12_vulkan_quat_spline/: .cproject  .project  Main.cpp
chapter08/: README.md
chapter08/01_opengl_gltf_load/: .cproject  .project  CMakeLists.txt  Main.cpp
chapter08/02_vulkan_gltf_load/: .cproject  .project  CMakeLists.txt  Main.cpp  imgui.ini
chapter09/: README.md
chapter09/01_opengl_gltf_bindpose/: .cproject  .project  Main.cpp
chapter09/02_opengl_gltf_gpu_skinning/: .cproject  .project  Main.cpp
chapter09/03_opengl_gltf_ssbo/: .cproject  .project  Main.cpp
chapter09/04_opengl_gltf_dual_quat/: .cproject  .project  Main.cpp
chapter09/04_vulkan_gltf_bindpose/: .cproject  .project
chapter09/05_vulkan_gltf_bindpose/: .cproject  .project  CMakeLists.txt  Main.cpp
chapter09/05_vulkan_gltf_gpu_skinning/: .cproject  .project
chapter09/06_vulkan_gltf_gpu_skinning/: .cproject  .project  Main.cpp
chapter09/06_vulkan_gltf_ssbo/: .cproject  .project
chapter09/07_vulkan_gltf_ssbo/: .cproject  .project  Main.cpp
chapter09/08_vulkan_gltf_dual_quat/: .cproject  .project  Main.cpp
chapter10/: README.md
chapter10/01_opengl_animations/: .cproject  .project  CMakeLists.txt  Main.cpp
chapter10/02_vulkan_animations/: .cproject  .project  CMakeLists.txt  Main.cpp
chapter11/: README.md
chapter11/01_opengl_blending/: .cproject  .project  Main.cpp
chapter11/02_opengl_crossblending/: .cproject  .project  CMakeLists.txt  Main.cpp
chapter11/03_opengl_additive_blending/: .cproject  .project  CMakeLists.txt  Main.cpp
chapter11/04_vulkan_blending/: .cproject  .project  Main.cpp
chapter11/05_vulkan_crossblending/: .cproject  .project  Main.cpp
chapter11/06_vulkan_additive_blending/: .cproject  .project  Main.cpp
chapter12/: README.md
chapter12/01_opengl_combobox/: .cproject  .project  Main.cpp
chapter12/02_opengl_radiobutton/: .cproject  .project  Main.cpp
chapter12/03_opengl_plots/: .cproject  .project  Main.cpp
chapter12/04_vulkan_combobox/: .cproject  .project  Main.cpp
chapter12/05_vulkan_radiobutton/: .cproject  .project  Main.cpp
chapter12/06_vulkan_plots/: .cproject  .project  Main.cpp
chapter13/: README.md
chapter13/03_vulkan_ccd/: .cproject  .project  CMakeLists.txt  Main.cpp
chapter13/03_vulkan_ccd/model/: GltfModel.cpp  GltfModel.h  GltfNode.h  IKSolver.cpp  IKSolver.h
chapter13/03_vulkan_ccd/shader/: gltf_gpu.vert
chapter13/03_vulkan_ccd/vulkan/: Pipeline.cpp  UserInterface.cpp  UserInterface.h  VkRenderData.h  VkRenderer.cpp  VkRenderer.h
chapter14/: README.md
chapter14/03_opengl_instanced_drawing/: .cproject  .project  CMakeLists.txt  Main.cpp
chapter14/03_opengl_instanced_drawing/include/glad/: glad.h
chapter14/03_opengl_instanced_drawing/model/: GltfInstance.cpp  GltfInstance.h  GltfModel.cpp  GltfNode.cpp
chapter14/03_opengl_instanced_drawing/opengl/: OGLRenderer.cpp  OGLRenderer.h  Shader.h
chapter14/03_opengl_instanced_drawing/shader/: gltf_gpu.vert  gltf_gpu_dquat.frag
chapter15/: README.md
(+725 files in other folders)
